[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Common/Helmet.gd" type="Script" id=2]
[ext_resource path="res://Models/helmet2.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://Controllers/User.gd" type="Script" id=4]
[ext_resource path="res://Entities/Controllable.gd" type="Script" id=5]
[ext_resource path="res://Common/Camera.gd" type="Script" id=6]
[ext_resource path="res://Sfx/hitHurt.wav" type="AudioStream" id=7]
[ext_resource path="res://Sfx/jump.wav" type="AudioStream" id=8]
[ext_resource path="res://Sfx/step.wav" type="AudioStream" id=9]
[ext_resource path="res://Shaders/Postprocess.gdshader" type="Shader" id=10]
[ext_resource path="res://Shaders/HUD.gdshader" type="Shader" id=11]
[ext_resource path="res://UI/Viewport.gd" type="Script" id=12]
[ext_resource path="res://Music/duns.ogg" type="AudioStream" id=13]
[ext_resource path="res://Main.gd" type="Script" id=15]
[ext_resource path="res://Sfx/timeout.wav" type="AudioStream" id=17]
[ext_resource path="res://Sfx/victory.wav" type="AudioStream" id=19]
[ext_resource path="res://Sfx/victory_norecord.wav" type="AudioStream" id=20]

[sub_resource type="CapsuleShape" id=98]
radius = 0.6
height = 0.6

[sub_resource type="Environment" id=120]
glow_intensity = 1.05
glow_strength = 1.22
glow_bloom = 0.19
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="ShaderMaterial" id=316]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/blur = Vector3( 0, 0, 0 )

[sub_resource type="ViewportTexture" id=319]
viewport_path = NodePath("UI")

[sub_resource type="ShaderMaterial" id=320]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/flicker = 0.0
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = SubResource( 319 )

[node name="Game" type="Spatial"]
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.39135, 0, 8.75692 )
collision_mask = 257
script = ExtResource( 5 )

[node name="Controller" type="Spatial" parent="Player"]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.92091, 0 )
shape = SubResource( 98 )

[node name="Head" type="Position3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="SfxStep" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 9 )

[node name="SfxJump" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 8 )

[node name="SfxLand" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 120 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="SfxTimeout" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="SfxVictoryNoRecord" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="SfxVictory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="Postprocess" type="ColorRect" parent="."]
material = SubResource( 316 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
usage = 0
render_target_v_flip = true
script = ExtResource( 12 )

[node name="Screen" parent="UI" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.39135, 1.6, 8.75692 )
far = 120.0
script = ExtResource( 6 )
follow = NodePath("../Player/Head")
delay = 80.0

[node name="Helmet" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.39135, 1.6, 8.75692 )
script = ExtResource( 2 )
follow = NodePath("../Camera")
delay = 20.0

[node name="MeshInstance" type="MeshInstance" parent="Helmet"]
material_override = SubResource( 320 )
mesh = ExtResource( 3 )
material/0 = null

[connection signal="timeout" from="UI/Screen" to="." method="_on_Screen_timeout"]
[connection signal="victory" from="UI/Screen" to="." method="_on_Screen_victory"]
